--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springboot-learn?characterEnco
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+mybatis-plus.mapper-locations=classpath*:/dao/**/*.xml
