--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,6 +6,13 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+#设置文件上传的限制  springboot默认最大文件1MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+spring.thymeleaf.prefix=classpath:/templates/
+
+
 spring.redis.host=localhost
 spring.redis.port=6379
 
