--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,8 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 mybatis-plus.mapper-locations=classpath*:/dao/**/*.xml
+
+#mail≈‰÷√
+spring.mail.hostname = smtp.163.com
+spring.mail.port = 25
+spring.mail.from = peng.test@example.com
