--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ spring.redis.port=6379
 
 mybatis-plus.mapper-locations=classpath*:/dao/**/*.xml
 
-#mail≈‰÷√
+#dev mail≈‰÷√
 spring.mail.hostname = smtp.163.com
 spring.mail.port = 2501
-spring.mail.from = peng.test@example.com
+spring.mail.from = peng.dev@example.com
