--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,6 @@
 server.port=8082
+
+#prod mail≈‰÷√
+spring.mail.hostname = smtp.163.com
+spring.mail.port = 2501
+spring.mail.from = peng.prod@example.com
