--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,14 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.18</version>
         </dependency>
+
+        <!-- 容联云 短信java sdk -->
+        <dependency>
+            <groupId>com.cloopen</groupId>
+            <artifactId>java-sms-sdk</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
     </dependencies>
 
 
