--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <version>1.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.7</version>
+        </dependency>
+
     </dependencies>
 
 
