--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,3 +22,5 @@ mybatis-plus.mapper-locations=classpath*:/dao/**/*.xml
 spring.mail.hostname = smtp.163.com
 spring.mail.port = 2501
 spring.mail.from = peng.dev@example.com
+
+#“Ï≤Ωœﬂ≥Ã≈‰÷√
