--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,3 +24,8 @@ spring.mail.port = 2501
 spring.mail.from = peng.dev@example.com
 
 #“Ï≤Ωœﬂ≥Ã≈‰÷√
+async.executor.corePoolSize=4 
+async.executor.maxPoolSize=10 
+async.executor.queueCapacity=100
+async.executor.keepAliveSeconds=60
+async.executor.threadNamePrefix=xpf-thread-
